# mcp-server-arxiv

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README_zh.md  harness-spec.md  harness-state.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: claude_code_usage.md
src/arxiv_mcp_server/: __init__.py  __main__.py  server.py
src/arxiv_mcp_server/models/: __init__.py  output.py  paper.py  search.py  summarize.py
src/arxiv_mcp_server/tools/: paper.py  search.py  summarize.py
src/arxiv_mcp_server/utils/: arxiv_api.py  pdf_downloader.py  pdf_extractor.py  rate_limiter.py  summarizer.py
tests/: conftest.py  test_arxiv_api.py  test_integration.py  test_pdf_downloader.py  test_pdf_extractor.py  test_rate_limiter.py  test_resources.py  test_summarizer.py  test_tools.py
