[project]
name = "mcp-server-arxiv"
version = "0.2.0"
description = "MCP server for arXiv paper search and summarization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "isagoakira"}
]
keywords = ["mcp", "arxiv", "ai-agent", "research", "paper", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
urls = {Homepage = "https://github.com/isagoakira/mcp-server-arxiv", Source = "https://github.com/isagoakira/mcp-server-arxiv", Tracker = "https://github.com/isagoakira/mcp-server-arxiv/issues"}

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "feedparser>=6.0.10",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
pdf = ["PyMuPDF>=1.24.0"]
anthropic = ["anthropic>=0.25.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",
]

[project.scripts]
arxiv-mcp = "arxiv_mcp_server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_mcp_server"]

[tool.hatch.build.targets.sdist]
include = ["src/"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: marks tests as integration (require network)"]